Readme, Jupyter book

--- a/NM.ipynb
+++ b/NM.ipynb
@@ -5585,7 +5585,7 @@
     "\n",
     "         ax.scatter(x,y[:,j],c='r', label=name)\n",
     "         plt.legend(loc='upper left')\n",
-    "         plt.title('Normative trejectory of' +name+' in '+sex+' cohort')\n",
+    "         plt.title('Normative trajectory of ' +name+' in '+sex+' cohort')\n",
     "         plt.show()\n",
     "         plt.close()\n",
     "        \n",
